--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.1.3",
     "axios": "^0.19.0",
     "font-awesome": "^4.7.0",
     "node-sass": "^4.12.0",
@@ -10,6 +11,7 @@
     "react-dom": "^16.8.6",
     "react-files": "^2.4.8",
     "react-scripts": "3.0.1",
+    "react-spinkit": "^3.0.0",
     "reactstrap": "^8.0.0"
   },
   "scripts": {
