--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "simon-algorythm",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "^4.2.1",
